--- a/ansible/roles/cassandra/tasks/config.yml
+++ b/ansible/roles/cassandra/tasks/config.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: copy Cassandra config
-  become: yes
+  become: True
   template: src=cassandra.yaml.j2 dest="/opt/{{ cassandra_dir}}/conf/cassandra.yaml"
 
 - name: set user and priviliges on Cassandra
