--- a/ansible/roles/cassandra/tasks/restart.yml
+++ b/ansible/roles/cassandra/tasks/restart.yml
@@ -1,4 +1,4 @@
 ---
 
-- include: stop.yml
-- include: start.yml
+- ansible.builtin.import_tasks: stop.yml
+- ansible.builtin.import_tasks: start.yml
