--- a/ansible/roles/create/tasks/launch_sync.yml
+++ b/ansible/roles/create/tasks/launch_sync.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: initialize security group
-  include: create_security_group.yml
+  include_tasks: create_security_group.yml
 
 - name: create master with ip pool
   os_server:
