--- a/ansible/roles/jupyter/tasks/main.yml
+++ b/ansible/roles/jupyter/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 
-- include: prepare.yml
+- import_tasks: prepare.yml
   when: not skip_install|default(False)
 
 - name: setup toree
-  become: yes
+  become: True
   shell: jupyter toree install
   when: not skip_install|default(False)
   tags:
@@ -31,13 +31,13 @@
   - jupyter_install
 
 - name: copy toree kernel config
-  become: yes
+  become: True
   file: path=/usr/local/share/jupyter/kernels/toree_python{{python_version}} state=directory
   tags:
   - install
   - jupyter_install
 - name: copy toree kernel config
-  become: yes
+  become: True
   template: src=toree_kernel.json.j2 dest=/usr/local/share/jupyter/kernels/toree_python{{python_version}}/kernel.json
   tags:
   - install
@@ -52,13 +52,13 @@
 
 - name: get dependencies
   package: name=libjansi-java state=present
-  become: yes
+  become: True
   tags:
   - install
   - jupyter_install
 
 - name: do magic
-  become: yes
+  become: True
   shell: apt-get update
   when: not skip_install|default(False)
   tags:
@@ -66,15 +66,15 @@
   - jupyter_install
 
 - name: install scala
-  become: yes
+  become: True
   shell: apt-get install -y scala
   when: not skip_install|default(False)
   tags:
   - install
   - jupyter_install
 
-- include: service.yml
-  become: yes
+- import_tasks: service.yml
+  become: True
   become_user: root
   when: install_as_service
 
