--- a/ansible/roles/jupyterhub/tasks/main.yml
+++ b/ansible/roles/jupyterhub/tasks/main.yml
@@ -1,31 +1,31 @@
 ---
 
 - name: Install necessary packages
-  become: yes
+  become: True
   apt: name={{ item }} state=present
   with_items:
     - curl
     - python-software-properties
 
 - name: Add nodejs LTS repo
-  become: yes
+  become: True
   shell: "curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash - "
 
 - debug: var=python_version
 - block:
   - name: install packages
-    become: yes
+    become: True
     apt: name={{ item }} state=present
     with_items:
       - nodejs
 
-  - become: yes
+  - become: True
     npm:
       global: true
       name: configurable-http-proxy
 
   - name: install pip packages
-    become: yes
+    become: True
     pip: name={{ item }} state=present executable=pip{{ python_version }}
     with_items:
       - jupyterhub
