--- a/ansible/roles/create/tasks/destroy_sync.yml
+++ b/ansible/roles/create/tasks/destroy_sync.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: acknowledge existing servers
-  os_server_facts:
+  openstack.cloud.server_info:
 
 - name: debug
   set_fact: alive_servers="{{ alive_servers | default([]) | union([item.name]) }}"
@@ -21,4 +21,4 @@
   retries: 3
 
 - name: destroy security group
-  include: destroy_security_group.yml
+  include_tasks: destroy_security_group.yml
