--- a/ansible/get_ip.yml
+++ b/ansible/get_ip.yml
@@ -1,12 +1,12 @@
 ---
 
 - hosts: localhost
-  gather_facts: no
+  gather_facts: false
   tasks:
     - name: Register master facts
       openstack.cloud.server_info:
         filters:
           metadata:
-            group: "{{ cluster_name }}_{{ extended_role }}"
-      no_log: True
-    - debug: msg="{{ openstack_servers[0].interface_ip if openstack_servers[0].interface_ip != '' else openstack_servers[0].private_v4 }}"
+            group: "{{ cluster_name }}_master"
+      register: master
+    - debug: msg="{{ master.servers[0].access_ipv4 }}"
