--- a/ansible/roles/create/tasks/create_security_group.yml
+++ b/ansible/roles/create/tasks/create_security_group.yml
@@ -1,64 +1,88 @@
 ---
 
 - name: create security group
-  os_security_group:
+  openstack.cloud.security_group:
     state: present
     name: "{{ cluster_name }}"
     description: "Security group for Spark cluster + {{ cluster_name }}"
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: icmp
     remote_group: "{{ cluster_name }}"
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: tcp
     remote_group: "{{ cluster_name }}"
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: udp
     remote_group: "{{ cluster_name }}"
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: tcp
     port_range_min: 8080
     port_range_max: 8080
     remote_ip_prefix: 0.0.0.0/0
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: tcp
     port_range_min: 8081
     port_range_max: 8081
     remote_ip_prefix: 0.0.0.0/0
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: tcp
     port_range_min: 7077
     port_range_max: 7077
     remote_ip_prefix: 0.0.0.0/0
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: tcp
     port_range_min: 4040
     port_range_max: 4040
     remote_ip_prefix: 0.0.0.0/0
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: tcp
     port_range_min: 18080
     port_range_max: 18080
     remote_ip_prefix: 0.0.0.0/0
 
-- os_security_group_rule:
+- openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: tcp
     port_range_min: 22
     port_range_max: 22
     remote_ip_prefix: 0.0.0.0/0
+
+## default Security Group
+- openstack.cloud.security_group_rule:
+    security_group: "{{ cluster_name }}"
+    direction: egress
+    protocol: any
+    remote_ip_prefix: 0.0.0.0/0
+
+- openstack.cloud.security_group_rule:
+    security_group: "{{ cluster_name }}"
+    ethertype: IPv6
+    direction: egress
+    protocol: any
+    remote_ip_prefix: ::/0
+
+- openstack.cloud.security_group_rule:
+    security_group: "{{ cluster_name }}"
+    protocol: any
+    remote_group: "{{ cluster_name }}"
+
+- openstack.cloud.security_group_rule:
+    security_group: "{{ cluster_name }}"
+    protocol: any
+    remote_group: "{{ cluster_name }}"
