--- a/ansible/get_ip.yml
+++ b/ansible/get_ip.yml
@@ -7,6 +7,6 @@
       openstack.cloud.server_info:
         filters:
           metadata:
-            group: "{{ cluster_name }}_master"
+            group: "{{ cluster_name }}_{{ extended_role }}"
       register: master
     - debug: msg="{{ master.servers[0].access_ipv4 }}"
