Revert "remove double rule, specify ethertype IPv6"
This reverts commit 4e5553533f29af4672e2492a824af2d54f55843d.

--- a/ansible/get_ip.yml
+++ b/ansible/get_ip.yml
@@ -7,6 +7,6 @@
       openstack.cloud.server_info:
         filters:
           metadata:
-            group: "{{ cluster_name }}_{{ extended_role }}"
+            group: "{{ cluster_name }}_master"
       register: master
     - debug: msg="{{ master.servers[0].access_ipv4 }}"
