--- a/ansible/roles/deploy_ssh/tasks/main.yml
+++ b/ansible/roles/deploy_ssh/tasks/main.yml
@@ -4,17 +4,20 @@
   local_action: file path="files/keys" state=directory
   tags: prepare
 
+# - name: Display all variables/facts known for a host
+#   debug:
+#     var: hostvars[inventory_hostname]
 
 - name: Check if instances really got floating IPs
   local_action: fail msg="One of the instances didn't get floating IP address"
-  when: hostvars[inventory_hostname].openstack.public_v4 == '' and floating_ip_pool != 'None'
+  when: hostvars[inventory_hostname].ansible_host == '' and floating_ip_pool != 'None'
 #  fail: msg="One of the instances didn't get floating IP address"
   tags: prepare
 
 - name: Wait for ssh-server to start
   local_action:
     module: wait_for
-      host="{{ hostvars[inventory_hostname].openstack.public_v4 }}"
+      host="{{ hostvars[inventory_hostname].ansible_host }}"
       port=22
       search_regex=OpenSSH
       delay=3
@@ -26,7 +29,7 @@
 - name: Wait for ssh-server to start
   local_action:
     module: wait_for
-      host="{{ hostvars[inventory_hostname].openstack.private_v4 }}"
+      host="{{ hostvars[inventory_hostname].ansible_host }}"
       port=22
       search_regex=OpenSSH
       delay=3
@@ -35,7 +38,7 @@
   when: floating_ip_pool == 'None'
 
 - name: install Python 2 if missing
-  raw: test -e /usr/bin/python || (sudo apt -y update && sudo apt install -y python-minimal)
+  raw: test -e /usr/bin/python2 || (sudo apt -y update && sudo apt install -y python2-minimal)
   delay: 10
   tags: prepare
 
@@ -72,10 +75,17 @@
   template: src=templates/config.j2 dest="/home/{{ hadoop_user }}/.ssh/config"
   tags: prepare
 
+# - name: Display all variables/facts known for a host
+#   debug:
+#     var: hostvars[item]
+#   with_items: "{{ play_hosts }}"
+
+# - pause:
+
 - name: modify /etc/hosts
   become: True
   become_user: root
-  lineinfile: dest=/etc/hosts state=present line="{{ hostvars[item].openstack.private_v4 }} {{ hostvars[item].openstack.name }}"
+  lineinfile: dest=/etc/hosts state=present line="{{ hostvars[item].ansible_default_ipv4.address }} {{ hostvars[item].ansible_hostname }}"
   with_items: "{{ play_hosts }}"
     #  template: src=templates/hosts.j2 dest=/etc/hosts
   tags: prepare
