updates, spark deployment ok

--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -1,7 +1,9 @@
 active_master: "{{ cluster_name }}-master"
 master_group_name: "{{ cluster_name + '_master' }}"
-active_master_ip: "{{ hostvars[groups[cluster_name + '_master'][0]].openstack.private_v4 }}"
-active_master_public_ip: "{{ hostvars[groups[cluster_name + '_master'][0]].openstack.private_v4 }}"
-active_master_inventory_hostname: "{{ hostvars[groups[cluster_name + '_master'][0]].inventory_hostname }}"
+active_master_ip: "{{ hostvars[inventory_hostname].ansible_default_ipv4.address}}"
+#active_master_ip: "{{ hostvars[groups[cluster_name + '_master'][0]].openstack.private_v4 }}"
+active_master_public_ip: "{{ hostvars[inventory_hostname].ansible_host }}"
+#active_master_public_ip: "{{ hostvars[groups[cluster_name + '_master'][0]].openstack.private_v4 }}"
+active_master_inventory_hostname: "{{ hostvars[inventory_hostname].ansible_hostname }}"
+#active_master_inventory_hostname: "{{ hostvars[groups[cluster_name + '_master'][0]].inventory_hostname }}"
 ubuntu_packages: ["dstat", "rsync"]
-
