--- a/ansible/roles/create/tasks/create_security_group.yml
+++ b/ansible/roles/create/tasks/create_security_group.yml
@@ -59,6 +59,13 @@
 - openstack.cloud.security_group_rule:
     security_group: "{{ cluster_name }}"
     protocol: tcp
+    port_range_min: 9870
+    port_range_max: 9870
+    remote_ip_prefix: 0.0.0.0/0
+    
+- openstack.cloud.security_group_rule:
+    security_group: "{{ cluster_name }}"
+    protocol: tcp
     port_range_min: 22
     port_range_max: 22
     remote_ip_prefix: 0.0.0.0/0
