--- a/ansible/roles/create/tasks/launch_async.yml
+++ b/ansible/roles/create/tasks/launch_async.yml
@@ -11,7 +11,7 @@
       flavor: "{{ master_flavor }}"
       key_name: "{{ os_key_name }}"
       network: "{{ virtual_network }}"
-      boot_from_volume: "{{ boot_from_volume }}"
+      # boot_from_volume: "{{ boot_from_volume }}"
       security_groups: "{{ cluster_name }}"
       auto_ip: false
       meta: "hostname={{ cluster_name }}-master,group={{ cluster_name }}_master"
@@ -28,7 +28,7 @@
       flavor: "{{ flavor }}"
       key_name: "{{ os_key_name }}"
       network: "{{ virtual_network }}"
-      boot_from_volume: "{{ boot_from_volume }}"
+      # boot_from_volume: "{{ boot_from_volume }}"
       security_groups: "{{ cluster_name }}"
       auto_ip: False
       meta: "hostname={{ item }},group={{ cluster_name }}_slaves"
@@ -57,7 +57,7 @@
   - name: 'Acquiring floating IPs for master instance'
     openstack.cloud.floating_ip:
       state: present
-      reuse: yes
+      reuse: true
       server: "{{ cluster_name }}-master"
       network: "{{ floating_ip_pool }}"
       wait: True
@@ -71,7 +71,7 @@
   - name: 'Acquiring floating IPs for slave instances'
     openstack.cloud.floating_ip:
       state: present
-      reuse: yes
+      reuse: true
       server: "{{ item }}"
       network: "{{ floating_ip_pool }}"
       wait: True
