--- a/ansible/roles/spark_common/tasks/main.yml
+++ b/ansible/roles/spark_common/tasks/main.yml
@@ -1,40 +1,46 @@
 ---
 
 - name: get Hadoop distro checksum
-  local_action: get_url url={{ hadoop_checksum_url }} dest=files/
+  local_action: 
+    module: get_url 
+    url: "{{ hadoop_checksum_url }}"
+    dest: files/
   become: false
   when: "hadoop_version != 'cdh4'"
   tags:
   - install
   - spark_install
 
-# it would be reasonable to use sha1 for crossplatform, but Spark doesn't provide sha1 checksum.
 - name: extract Hadoop checksum from file
-  set_fact: hadoop_sha512="{{ lookup('file', hadoop_arch_checksum) | regex_replace('.*SHA512.+ ', '' ) |  replace(' ', '') }}"
-  #set_fact: hadoop_md5="{{ lookup('file', hadoop_arch_checksum) | regex_search('.*MD5.*') | regex_replace('.*MD5 = (.*)', '\\1' ) |  replace(' ', '') }}"
-  when: " hadoop_version != 'cdh4'"
+  set_fact: 
+    hadoop_sha512: "{{ lookup('file', hadoop_arch_checksum) | regex_replace('.*SHA512.+ ', '' ) |  replace(' ', '') }}"
+  when: "hadoop_version != 'cdh4'"
   tags:
   - install
   - spark_install
 
-- debug: var=hadoop_sha512
+- name: Hadoop checksum
+  debug: var=hadoop_sha512
 
 - name: get Spark distro checksum
-  local_action: get_url url={{ spark_checksum_url }} dest=files/
+  local_action: 
+    module: get_url 
+    url: "{{ spark_checksum_url }}" 
+    dest: files/
   become: false
   tags:
   - install
   - spark_install
 
-# it would be reasonable to use sha1 for crossplatform, but Spark doesn't provide sha1 checksum.
 - name: extract Spark distro checksum from file
-  set_fact: spark_sha512="{{ lookup('file', spark_arch_checksum) | regex_replace('  spark.*', '') |  replace(' ', '') }}"
-  #set_fact: spark_md5="{{ lookup('file', spark_arch_checksum) | regex_replace('.*tgz:(.*)', '\\1' ) |  replace(' ', '') }}"
+  set_fact: 
+    spark_sha512: "{{ lookup('file', spark_arch_checksum) | regex_replace('  spark.*', '') |  replace(' ', '') }}"
   tags:
   - install
   - spark_install
 
-- debug: var=spark_sha512
+- name: Spark checksum
+  debug: var=spark_sha512
 
 - import_tasks: tasks/prepare_spark.yml
   become: True
@@ -44,16 +50,13 @@
   - install
   - spark_install
 
-- import_tasks: detect_conf.yml
-  when: detect_conf
-
 - import_tasks: detect_java_home.yml
   when: spark_common_completed is undefined
 
 - import_tasks: as_root.yml
   become: True
   become_user: root
-  when: spark_common_completed is undefined and not skip_spark_setup|default(False)
+  when: spark_common_completed is undefined and not skip_spark_setup | default(False)
   tags:
   - install
   - spark_install
