--- a/ansible/tasks/prepare_spark.yml
+++ b/ansible/tasks/prepare_spark.yml
@@ -2,19 +2,11 @@
 
 - name: get Hadoop distro
   become: False
-  local_action: get_url url={{ hadoop_download_url }} dest=files/ checksum="sha512:{{ hadoop_sha512 }}"
-
-# - name: get Hadoop distro (except CDH4)
-#   become: False
-#   local_action: get_url url={{ hadoop_download_url }} dest=files/ checksum="md5:{{ hadoop_sha512 }}"
-#   #local_action: get_url url={{ hadoop_download_url }} dest=files/ checksum="md5:{{ hadoop_md5 }}"
-#   when: "hadoop_version != 'cdh4'"
-
-# - name: get Hadoop distro (CDH4)
-#   become: False
-#   local_action: get_url url={{ hadoop_download_url }} dest=files/
-#   when: "hadoop_version == 'cdh4'"
-
+  local_action: 
+    module: get_url 
+    url: "{{ hadoop_download_url }}" 
+    dest: files/ 
+    checksum: sha512:{{ hadoop_sha512 }}
 
 - name: distribute hadoop among slaves
   synchronize:
@@ -24,55 +16,63 @@
 #  delegate_to: "{{ active_master_inventory_hostname }}"
 
 - name: unzip hadoop
-  unarchive: copy=no src=/usr/local/{{ hadoop_file }}.tar.gz dest=/usr/local/ owner={{ hadoop_user }} group=hadoop
+  unarchive: 
+    copy: no
+    src: /usr/local/{{ hadoop_file }}.tar.gz 
+    dest: /usr/local/ 
+    owner: "{{ hadoop_user }}" 
+    group: hadoop
 
 - name: create hadoop symlink
-  file: src=/usr/local/{{ hadoop_file }} dest=/usr/local/hadoop state=link
-
-
-- name: put needed swift library
-  get_url: url={{ swift_download_url }} dest=/usr/local/{{ hadoop_file }}/share/hadoop/hdfs/lib/
-  when: "hadoop_version == 2.3 or hadoop_version == 2.6"
-
-#- name: remove hadoop archive
-#  file: path=/usr/local/{{ hadoop_file }}.tar.gz state=absent
+  file: 
+    src: /usr/local/{{ hadoop_file }} 
+    dest: /usr/local/hadoop 
+    state: link
 
 - name: set user and priviliges on hadoop
-  file: path=/usr/local/{{ hadoop_file }} owner={{ hadoop_user }} group=hadoop recurse=yes
+  file: 
+    path: /usr/local/{{ hadoop_file }} 
+    owner: "{{ hadoop_user }}" 
+    group: hadoop 
+    recurse: true
 
 - name: get Spark distro
   become: False
-  local_action: get_url url={{ spark_download_url }} dest=files/ checksum="sha512:{{ spark_sha512 }}"
-  #local_action: get_url url={{ spark_download_url }} dest=files/ checksum="md5:{{ spark_md5 }}"
-
-#- name: put spark distro to master
-#  copy: src={{ spark_arch }} dest=/opt/
-#  when: "'{{ inventory_hostname }}' == '{{ active_master_inventory_hostname }}'"
+  local_action: 
+    module: get_url 
+    url: "{{ spark_download_url }}" 
+    dest: files/ 
+    checksum: sha512:{{ spark_sha512 }}
 
 - name: distribute spark distro among slaves
   synchronize:
-    src: "files/{{ spark_file }}.tgz"
-    dest: "/opt/{{ spark_file }}.tgz"
+    src: files/{{ spark_file }}.tgz
+    dest: /opt/{{ spark_file }}.tgz
     checksum: yes
 #  delegate_to: "{{ active_master_inventory_hostname }}"
 
 - name: unzip spark
-  unarchive: copy=no src=/opt/{{ spark_file }}.tgz dest=/opt
-
-#- name: remove spark archive
-#  file: path=/opt/{{ spark_file }}.tgz state=absent
-
-- name: create spark symlink
-  file: src={{ spark_home }} dest=/opt/spark state=link
+  unarchive: 
+    copy: false 
+    src: /opt/{{ spark_file }}.tgz 
+    dest: /opt
 
 - name: create spark symlink
-  file: src={{ spark_home }} dest=/usr/local/spark state=link
+  file: 
+    src: "{{ spark_home }}" 
+    dest: /opt/spark 
+    state: link
+
+- name: create spark symlink
+  file: 
+    src: "{{ spark_home }}" 
+    dest: /usr/local/spark 
+    state: link
 
 
 - name: create extra jars directory
-  file: path={{ spark_extra_jars_dir }} owner={{ hadoop_user }} group=hadoop state=directory
-
-- name: copy extra jars
-  copy: src={{item.path}} dest={{ spark_extra_jars_dir }}/{{item.name}} owner={{ hadoop_user }} group=hadoop mode=0644
-  with_items: "{{extra_jars}}"
-
+  file: 
+    path: "{{ spark_extra_jars_dir }}" 
+    owner: "{{ hadoop_user }}" 
+    group: hadoop 
+    state: directory
