--- a/ansible/roles/create/tasks/destroy_security_group.yml
+++ b/ansible/roles/create/tasks/destroy_security_group.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: destroy security group
-  os_security_group:
+  openstack.cloud.security_group:
     state: absent
     name: "{{ cluster_name }}"
     description: "Security group for Spark cluster + {{ cluster_name }}"
