--- a/ansible/roles/create/tasks/launch_sync.yml
+++ b/ansible/roles/create/tasks/launch_sync.yml
@@ -30,7 +30,6 @@
     auto_ip: no
     # floating_ip_pools: "{{ floating_ip_pool }}"
     network: "{{ virtual_network }}"
-    boot_from_volume: "{{ boot_from_volume }}"
     security_groups: "{{ cluster_name }}"
     meta: 
       hostname: "{{ cluster_name }}-master"
@@ -47,20 +46,16 @@
     key_name: "{{ os_key_name }}"
     floating_ip_pools: "{{ floating_ip_pool }}"
     network: "{{ virtual_network }}"
-    boot_from_volume: "{{ boot_from_volume }}"
     security_groups: "{{ cluster_name }}"
     meta: 
       hostname: "{{ item }}"
       group: "{{ cluster_name }}_slaves"
-  with_sequence: 
-    start: 1 
-    end: "{{ n_slaves }}" 
-    format: "{{ cluster_name }}-slave-%d"
+  with_sequence: start=1 end="{{ n_slaves }}" format="{{ cluster_name }}-slave-%d"
   retries: 3
   when: floating_ip_pool != "None"
 
 
-- name: create slaves
+- name: create slaves without ip pool
   openstack.cloud.server:
     state: present
     name: "{{ item }}"
@@ -70,14 +65,10 @@
     auto_ip: no
     # floating_ip_pools: "{{ floating_ip_pool }}"
     network: "{{ virtual_network }}"
-    boot_from_volume: "{{ boot_from_volume }}"
     security_groups: "{{ cluster_name }}"
     meta: 
       hostname: "{{ item }}"
       group: "{{ cluster_name }}_slaves"
-  with_sequence: 
-    start: 1 
-    end: "{{ n_slaves }}" 
-    format: "{{ cluster_name }}-slave-%d"
+  with_sequence: start=1 end="{{ n_slaves }}" format="{{ cluster_name }}-slave-%d"
   retries: 3
   when: floating_ip_pool == "None"
