Update Spark OpenStack: - Add Almalinux 9 support - Update Spark to version 3.5.5 - Update Hadoop to version 3.4.1 - Edit creation of Security Group for macOS - Edit README.md

--- a/ansible/group_vars/all/openjdk.yml
+++ b/ansible/group_vars/all/openjdk.yml
@@ -1,1 +1,2 @@
-java_package: "openjdk-8-jdk-headless"
+java_package_debian: "openjdk-8-jdk-headless"
+java_package_redhat: "java-1.8.0-openjdk-headless"
